added footer in the index.html

--- a/index.html
+++ b/index.html
@@ -5,3 +5,6 @@
 	<h1>Mazharul Islam</h1>
 	<p>this is a hero image and we don't intend to do this in a daily work basei</p>
 </section>
+<footer>
+	all rights reserve to mazharul islam@2023
+</footer>
