added my email at footer

--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 	<p>this is a hero image and we don't intend to do this in a daily work basei</p>
 </section>
 <footer>
-	all rights reserve to mazharul islam@2023
+	<span>all rights reserve to mazharul islam@2023</span>
+	<span>Contact us: mazharul@gmail.com</span>
+	
 </footer>
