added more info on about page

--- a/about.html
+++ b/about.html
@@ -1,2 +1,6 @@
 <h1>About me </h1>
-<p>I am full stack web developer and javascript developer from bangladesh</p>
+<p>
+I am full stack web developer and javascript developer from banglades
+h. My key skills set are Javascript,html,css,react,redux,node js, mongodb,
+prisma,tailwindcss,nextjs,firebase etc
+</p>
